# glade

./: PRD.md  README.md  command-paletter-implementation-spec.md  components.json  feature-backlog.md  homeview-and-sidebar-spec.md  index.html  known_issues.md  multiple-theme-support-spec.md  package-lock.json  package.json  skills-lock.json  test-cm.mjs  vite.config.ts
.agent/: rules.md
docs/: CODE_REVIEW.md  README.md  architecture_overview.md  feature-backlog.md  known_issues.md  technical_decisions.md
docs/code-review/: import-feature-review.md
docs/specs/: import-notes.md  note-export.md
src/: App.tsx  index.css  main.tsx  test-print.html  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  types.rs  vault.rs
src-tauri/src/commands/: export.rs  import_.rs  note.rs  search.rs  sidebar.rs  tag.rs  vault.rs
src/components/: Breadcrumbs.tsx  CommandPalette.tsx  CreateFolderDialog.tsx  DeleteConfirmDialog.tsx  Editor.tsx  ErrorBoundary.tsx  FolderCard.tsx  HomeView.tsx  ImportDialog.tsx  NoteCard.tsx  OpenWithDialog.tsx  RenameDialog.tsx  SettingsDialog.tsx  SettingsPage.tsx  Sidebar.tsx  StatusBar.tsx  TagInput.tsx  ThemeProvider.tsx  TipTapEditor.tsx
src/hooks/: useAutosave.ts  useCommandShortcuts.ts
src/lib/: dates.ts  mermaid.ts  notes.ts  soundEngine.ts  sounds.ts  tree.ts  utils.ts
src/store/: index.ts
src/stores/: useDialogStore.ts  useHomeStore.ts  useSidebarStore.ts  useThemeStore.ts  useVaultStore.ts  useVaultsStore.ts
(+117 files in other folders)
