[package]
name = "glade"
version = "0.1.0"
description = "A local-first, Git-synced markdown note-taking app"
authors = ["you"]
edition = "2021"

[lib]
name = "glade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["data-url"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
pulldown-cmark = "0.12"
mime_guess = "2.0.5"
base64 = "0.22.1"
